Fixed bottom alignment issue (how did that happen?)

--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,7 @@ img {
     font-size: 1.2em;
     font-weight: 700;
     background-color:#ffdecc;
-    margin: 0 10px;
+    /* margin: 0 10px; */
     
 }
 
@@ -188,6 +188,7 @@ img {
 }
 
 .footer-name {
+    text-align: left;
     float: left;
     color: midnightblue;
 }
